Added all exercises

--- a/pratica 2.ipynb
+++ b/pratica 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "\n",
     "def load_iris():\n",
-    "    fh = open(\"iris.data\", 'r')\n",
+    "    fh = open(\"data/iris.data\", 'r')\n",
     "    csv_fh = csv.reader(fh)\n",
     "    \n",
     "    header = csv_fh.next()\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
        "            presort=False, random_state=0, splitter='best')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
        "       [ 6. ,  2.5]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +181,7 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
        "       [ 0.        ,  0.02173913,  0.97826087]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +241,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEKCAYAAADuEgmxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XuUXXV99/H3Zy5JJuROAkmTlEihpBEplzQKuCwWbQGt\n2KeUgtWltjypLTbaltUltNXW5a03bV2y1Bh4REuhFK3GNq2lgA/SVCBEIIaLBh4pCSEQEiYJzCRz\n+T5/nD0zZ87sM2fPmXPOPmfm81prVs7e53f2/k4g8529v/v7+ykiMDMzy6It7wDMzKx1OGmYmVlm\nThpmZpaZk4aZmWXmpGFmZpk5aZiZWWZOGmZmlpmThpmZZeakYWZmmXXkHUCtzZvZESfM6cw7DDOz\nlvLkgd79EbGk0rgplzROmNPJp39pVd5hmJm1lEtvefzpLON8e8rMzDJz0jAzs8ycNMzMLDMnDTMz\ny8xJw8zMMnPSMDOzzJw0zMwsMycNMzPLzEnDzMwyc9IwM7PMnDTMzCwzJw0zM8vMScPMzDJz0jAz\ns8ycNMzMLDMnDTMzy8xJw8zMMnPSMDOzzJw0zMwss9yShqRZku6X9LCknZL+PGXMTEn/KGmXpPsk\nrWp8pGZmNiTPK42jwC9ExM8CZwIXSXpdyZjfAg5GxCnAZ4C/aHCMZmZWJLekEQVHks3O5CtKhl0K\n3JS8vh24UJIaFKKZmZXItaYhqV3SQ8DzwB0RcV/JkOXAMwAR0Q90A8enHGe9pG2Sth3q7a932GZm\n01auSSMiBiLiTGAFsE7S6VUeZ2NErI2ItfNmddQ2SDMzG9YUT09FxEvA3cBFJW/tAVYCSOoA5gMv\nNjY6MzMbkufTU0skLUhedwFvBh4vGbYZeHfy+jLgrogorXuYmVmD5HkvZxlwk6R2Csnrtoj4F0kf\nBbZFxGbgBuCrknYBB4Ar8gvXzMxySxoR8QhwVsr+Dxe97gV+rZFxmZlZeU1R0zAzs9bgpGFmZpk5\naZiZWWZOGmZmlpmThpmZZeakYWZmmTlpmJlZZk4aZmaWmZOGmZll5qRhZmaZOWmYmVlmThpmZpaZ\nk4aZmWXmpGFmZpk5aZiZWWZ5rty3UtLdkh6VtFPSB1LGXCCpW9JDydeH045lZmaNkefKff3AH0bE\ndklzgQcl3RERj5aM+25EvDWH+MwsBx0/1c2sdS+gOf3EkQ56719C/5PzJzQemNAxLLs8V+7bC+xN\nXh+W9BiwHChNGmY2TXT8VDddb3gOdQYAmttP1xueowdSf+injv/5vSBQO5mOYRPTFDUNSasoLP16\nX8rb50p6WNK/SXp1QwMzs4aate6F4QQwRJ3BrHUvZB/fMZIwshzDJibP21MASJoDfA34YEQcKnl7\nO3BSRByRdAnwDeDUlGOsB9YDLJmd+7dkZlXSnP6a7J/sWCsv1ysNSZ0UEsbNEfH10vcj4lBEHEle\nbwE6JS1OGbcxItZGxNp5s5w0zFpVHEn/9zvR/ZMda+Xl9rcoScANwGMR8ekyY5YC+yIiJK2jkORe\nbGCYZpaYaIE6i5nn7WXGmm4QENC/pwvNGhh1yyn6NFzcLtV7/5JRNQ2A6GdUTaPSMWxi8ky95wPv\nAnZIeijZdx3wkwAR8QXgMuB3JPUDPcAVERFpBzOz+plogTqLmeftZcaru5GSHYKOFT307+6ifUFf\npuTU/+R8ehj7pBQp+1wEr408n566l8LvF+ON+RzwucZEZGbljFegPlLlD+MZa4oSxtAxBR3Lezi8\naXXm4/Q/OT81hmrjsvE1xdNTZtbcalGIHvvhCe63puCkYWYV1aIQPfbDE9xvTcGPE5hZRb33L6Hr\n5/eiop8YMQB0DDL3fz9etpbQ9/RxdJ70cmpt4dij80fXNIBIiuFzrtxVth6RpSBfj6J9NZoljlpy\n0jCzbEpvG7VBW9dg4a25/XRdsBeC4cSiuf2jkkJp8fzo1mUAY56e6ljaW7bgnqUgX4+ifTWaJY5a\n8+0pM6to1roXxnZZlxax2xl1JZI6pqQz++jWZRzetJrDX1rN4U2rC09NjdMRnqVjfKJd5fXSLHHU\nmpOGmVVUy27q8Y5VqeCepSBfl6J9FZoljlpz0jCzimrZTT3esSoV3LMU5OtStK9Cs8RRa60dvZk1\nRGrndYy+/RQDjKpppI4p6cwuLRT3PX0cM047NPo8A0DHQKHg3itiYPxu79RY69ARXqnI3ag4Gs1J\nw8wqSuu8TnsyigxjxitYzzjtEMeemDfymd421DlIW1cypiuIfhjsaUOzBlN/WJfrEq9l8TlLkbsR\nceTBScPMMknrvD66dey4LGOgfKG486SXOXLLKQCFR2+TJ7SGx3RA9LRx+Es/PaFYaylrh3y948iD\naxpmlotWKmpnPX/ecTWCk4aZ5aKVitpZz593XI0w9b9DM8tNWqF7pF4hYhBU9KtrDEDf08eNdIT3\nthH9pHSiD4zqRG9EnWDU95KhID9VOWmYWV2kFrqLO8S7gjELHQhmrO4e6SrvGiQGYLBHaFaMLYw3\nqMt6zPeSoSA/Vfn2lJnVRWqxOGUq9FHbbSld5e1AfzuHv7Qa+tvGvt+ALutya5HT38bhL63myC2n\nTIuEAU4aZlYn9egiz6sAPZ0L36VySxqSVkq6W9KjknZK+kDKGEn6rKRdkh6RdHYesZrZxNWjizyv\nAvR0LnyXyvM77gf+MCK2S5oLPCjpjoh4tGjMxcCpyddrgc8nf5pZjY1btM6wnakjurRDPEtXeVGB\nuV5d1lV1d/czZmr46XCLKs/lXvcCe5PXhyU9BiwHipPGpcBXknXBvydpgaRlyWfNrEYqFq0zbGfp\niM6SeKB8F3U9uqyr6u7uFZoRo6eGnwLTnmfRFNdWklYBZwH3lby1HHimaHt3ss9Jw6yGqipal5n2\nvFJHdGmHeJau8mK17rKupru70KneX/EzU1HuhXBJc4CvAR+MiENVHmO9pG2Sth3qnX6FKbPJqlVB\ntxULw9UUuadzYTzXpCGpk0LCuDkivp4yZA+wsmh7RbJvlIjYGBFrI2LtvFlNcfFk1lJqVdBtxcJw\nNUXu6VwYn9B3KGle8Wci4kC1J5Yk4AbgsYj4dJlhm4H3S7qVQgG82/UMs9qrqmidMu35qG7uFlmb\nu5ri+lSd9jyLTElD0m8Dfw70AkN/SwGcPIlznw+8C9gh6aFk33XATwJExBeALcAlwC7gFeC9kzif\nmZWRWuidGWPXBS8RxwSdkboWRquszV1NcX2qTnueRdYrjWuA0yNif61OHBH3UuF/yeSpqatrdU4z\nK69ioTelEB4dUejUHvpMhoJyvWUtbBerprg+Fac9zyJrTeNJCr/pm9k0kLmgW5RImqU43CxxTFVZ\nrzSuBbZKug84OrQzIjbUJSozy1Uc6UBzM/yQLfqFvtxn8libuxnimKqy/i1+EbgL2AEMVhhrZk1u\n4WueZmBdT+FewyC039/FK3NnMGNNd+HqIRg7bXlKIfzYoxNbE3vmeXtHnaN/TxftC/rGrQtUKmpn\nWme8wtrk06UeUQtZk0ZnRPxBXSMxs4ZY+JqnGXhdz8itpXYYeF0PMynap0JSGC50pxXGAwb2zR7e\nrFQcnnne3lFd5Ag6VvSM21VeqaidaZ3xDGuTT5du7lrImjT+TdJ64FuMvj1V9SO3ZpaPgXU9Yx9B\nSXkkpbjQnVoYb2NCa2LPWNM94a7ySkXtLOuMl6qmUG4jsiaNK5M/ry3aN9lHbs0sDxNp6R26CqhF\ncbnC47tpx6x0XndzN16mpBERr6p3IGbWIINAe8VRBckv5DUpLgeZEkfpGuHjnbeauFwonxzFmPUW\ni96U3pmM+WrJ/ncBAxHxD3WOb8LWnnZi3P/FKysPNJtC9vE4P2YrRznMTOayivM4kdWpY3/4P1/j\nuZW7x9QngDH7ln27nZ/+ywH2/cpMfvi7fQy2jzwH00YHp3Jh2fOMOS938Rw7xh1Tesx9PM6PuJNB\n+lPHVHo/TTWfmQ7a3/h3D0bE2krjKiWN+4ALI+JIyf7jgHsi4pxJR1pjZ8yYEVuWnJh3GGYNc+i8\nl3nhqpeImSP/lnVULNm0gHlbj0v9zIvv2MfBi/qGn55a+O+d9Hd2cvjCV4b3Ld0Mqz878pm9F8JT\n69voWzxIx4vtLLptXtnjl7Pv3QdGnWPmzk4Glg3Sf/xA2WMeOu9lDlx+qOyYSu+X+zub6GemupXP\n7q5J0tgeEamr5Ul6JCLOmESMdeGkYdPNj/92L/1LBsbs73ihnVUfXFbVMZfu20vHwNhj9re389yJ\n1R3TmlvWpFGpJNaVXFWMkqy0N6Pa4MysdvoXj/3hDtB/fPr+LNpTEsZ4+236qJQ0bgBul3TS0I5k\nwaRbk/fMLGcd+9Or2h0vZq12jzXQnv7Zcvtt+hj3cYGI+GtJR4B7ksWSBBwGPhURn29EgGY2vkW3\nzeOF3zpIzBrZp97C/iFdr7zM/MOHaB8YYKC9ne658+iZXf4efvfceSzsfom2otvXg4AGg+XP7s50\njFoZrj8sHqBjv+sPeav4jFkyRfkXkltSRMThukdlZpmd+J+w8CD8+Co4egLMfB5WbYIZD0LP7ELC\nKE4AHQMDLOx+CaDsD/2h/UOJZlCiLYK2GMx8jFooLfL3LxnghasK53XiyEfW9TRmAr8MrJJUvAjT\nR+sVmJllM//wITruhGV3jt7f336IntnHMf/woVFXDABtEcw/fGjcH/g9s48bfn/pvr2opJ6R5RiT\ndeDyQ6OeCgOImcGByw85aeQkazfLN4Fu4EGKphExs/xVKlrXoqidV2G8HkV+m5ysSWNFRFxU65NL\nuhF4K/B8RJye8v4FFBLW/0t2fd1XN2ajDbS3pz4eO1S0rvR+Lc5RLx3729MfJ55Ekd8mJ2vS2Crp\nNRExfjvnxH0Z+BzwlXHGfDci3lrj85o1rWqK1oteOjimwVuDgyx/djeD0pgZPAaTzxWbf/AAc3pG\n1lp7+uJOdr93kP7FAzz9QhvH/xccPLe0bjL6GLW26LZ5qY2LxUV+a6xxk4akHRT+/+sA3ivpKQq3\np0RhNdZJNfdFxD3JI7xmRnVF6/kvHUzd354coz2C0hbe0imghhLG0P59F8L/bOhjMHkiq++EQZ57\n+8gHjy6FH14DS26AeVsn8A1O0FDdwt3bzaPSlUYz/IZ/rqSHgWeBayJiZ94BmdVLNUXrdirPdJ62\nXXzM4oQB8NRVDCeMcgeJWTSkID1v63FOEk2kUp/G0wCSvhoR7yp+T9JXgXelfrB2tgMnRcQRSZcA\n3wBOLR2UrPWxHmC5m4+shTWy4DzeMY+ekO0YLkhPP1ln1n918YakdqDukxVGxKGhyRIjYgvQKWlx\nyriNEbE2ItYuapvIYgFmzaWRndjjHXPm89mO4YL09FOppnEtcB2FOagODe0GjgEb6xwbkpYC+yIi\nJK2jkORerPd5zWqlJp3Y0qiidWnBusys5pW3k0L5QHs7vZ2dzOrrGx5z8iZ44pqSW1QlB6lFQdrd\n3q2n0u2pTwKflPTJiLh2vLHVkHQLcAGwWNJu4CNAZ3LuLwCXAb8jqR/oAa6I8ablNWsitejELk00\npQXrIdX8o2gviqttcHA4cQCccCf0zEienkoK0F3fn0nPWUdrVpB2t3drqjQ1euq06EMiYnvNI5ok\nT41uzaIe04svf3Z36uJ3Aez5iRXjnreSRk97Xo8p3a16WadGr/T01N8kf84C1gIPU7hAPQPYBpw7\nmSDNprK8uqirPX6jpz13t3drGrdqHBFvjIg3AnuBs5Ni8znAWcCeRgRo1qryml682uM3etrzekzp\nbvWXtSP8tOJu8Ij4gaSfqVNMZk2pFkXtoPAb/fJndwPQ29lJf0fnqMJ2X1sbnYODZbfTitq9nZ0s\n3bd3eEbaTIXwou3SYnsjuNu7NWVNGo9I2gT8fbL9G8Aj9QnJrPnUoqg99IO6+If1rL4+KHpqCaBz\ncHDc7bQq5My+vuHbBmkd4KWf6+3spHNwMHMCrAd3e7emrEnjvcDvAB9Itu8BvAiTTRu1mF48rYid\nVtSuprs7y5hmXN/b3d6tJ1PSiIhe4DPJl9m0MxXWzG6lWK15VWruuy0iLi+auHCUyU5YaNYq8poa\nvJZaKVZrXpWuNIZuRzXDxIVmucnSqZ2muHhernM7bd9Et4PRj0KmTYWex/reNvVUShq/LmkrsD0i\n+hsRkFkzqtSpnaa0eC7Si9jFndjlVOr4frlrNl3Hjg7H1jNj5vB2Xut729RUKWmsAP4WWJ3covov\nYCuwNSIO1Ds4s2ZSXNTOIq14nlag7hwcHLebu7iIXe79rmNHxxS5u5M/81rf26amSnNPXQMgaQaF\njvDzKDxJtVHSSxGxpv4hmrWmrIXn4nH1WO97KhTxrXlknUe8C5gHzE++ngXuq1dQZlNB1sJz8bhK\nXeTVdJnn1ZluU1Olp6c2UlhL4zCFJLEV+HREpK8vaZaTiXZrNyKOLJ3ZpcX0SgX3agry1RbxzdJU\nqmn8JDAT+BGFuaZ2Ay/VOyiziaimW7sRcaR1ZgcwqDbaYjA1uVUquFdTkK/mM2blVKppXCRJFK42\nzgP+EDhd0gHgvyPiIw2I0Wxc1XZrNyKO0sJ3G9DfJvacuKLscSoV3CdakK/2M2ZpKnaEJ4se/UDS\nSxQeyOim0LexjsKiSWa5apZCbzWFb7NWU6mmsYHCFcZ5QB/J47bAjcCOcT6aiaQbKSSg5yPi9JT3\nBfwdcAnwCvCeZlz4yfJVbbd26bKpR7pm071wUeb3YXQNYyKKm+zAt46sdVS60lgF/BPw+xGxtw7n\n/zLwOeArZd6/GDg1+XothUkSX1uHOKyFVVPoTVs2dShBdC9cVPF9GFvDgIl1c3cMDLDwpYOjJhx0\n4501u0qP3H4MuBs4KmlR6ddkTx4R9wDjNQleCnwlCr4HLJDUXNN0Wu56Zh/HwfkL6G9vJyg0wh2c\nv2DcH7pp62yLkcRQ6X0oX8MYmtajv72dI12zh+MqTSBQ+Ac4Zl9SjzFrRpWuNB4k/f91kv0n1zyi\n0ZYDzxRt7072jbrqkbQeWA+w3M+eT0t5FHrHuyU11OENI53ZQwsvTfbYZnmq9PTUqxoVyGRExEZg\nI8AZM2ZUmqbHrCYmWkspN77cWLNmlLUjHEkLJa2T9Iahr3oGltgDrCzaXoHXJrcaONI1O7WH4kjX\n7EzvQ6GWMqjRF+Hj1VJSxzN2MkI33lkzy7QIk6SrKEyTvgJ4CHgd8N/AL9QvNAA2A++XdCuFAnh3\nnQryNs0MFbPLPR1V6X2YeNNcufETOYZZ3rIu9/oB4OeA70XEGyWtBj4x2ZNLugW4AFgsaTeFvo9O\ngIj4ArCFwuO2uyg8cvveyZ7TbEj3wkVjHqGdyPsw8VpKufFOEtYqsiaN3ojolYSkmRHxuKTTJnvy\niLiywvsBXD3Z85iZWW1kTRq7JS0AvgHcIekg8HT9wjIzs2aUKWlExK8kL/9M0t0Upkf/t7pFZWZm\nTSnT01OSvjr0OiL+b0RspjCViJmZTSNZH7l9dfGGpHbgnNqHY2ZmzazShIXXAtcBXZIOMdIZfoyk\nma7ZHDllNd+9eUveYZiZtZazV1YeQ4UrjYj4ZETMBf4qIuZFxNzk6/iIuLYWcZqZWevIenvqjyW9\nU9KfAkhaKWldHeMyM7MmlDVpXA+cC7wj2T6S7DMzs2kka5/GayPibEnfB4iIg5Jm1DEuMzNrQlmv\nNPqSJ6YCQNISCnOtmZnZNJI1aXwW+GfgBEkfB+6lBnNPmZlZa8naEX6zpAeBCyk8dvv2iHisrpHZ\npNy7pYvbrp/P/ufaWbx0gMuv7ub1l/TkHZaZtbhKfRqzgPcBpwA7gC9GRH8jArPq3buli00fW8ix\n3sKF5P69HWz62EIAJw4zm5RKt6duAtZSSBgXA39d94hs0m67fv5wwhhyrLeN266fn1NEZjZVVLo9\ntSYiXgMg6Qbg/vqHZJO1/7n0pUJfLLPfzCyrSlcafUMvfFuqdSxemr4O9fFl9puZZVUpafyspEPJ\n12HgjKHXyVxUkyLpIklPSNol6UMp779H0guSHkq+rprsOaeDy6/uZsas0U9Ez5g1yJnn97DhLUt5\nxznL2fCWpdy7pSunCM2sVY17eyoi6nY/I+n7uB54M7AbeEDS5oh4tGToP0bE++sVx1Q0VOy+7fr5\nvPhcO8cvHeDM83u451+Oc3HczCYla0d4PawDdkXEUwCSbgUuBUqThlXh9Zf0jEoGG96ytGxx3EnD\nzLLK2txXD8uBZ4q2dyf7Sv2qpEck3S4pde5eSeslbZO07fDBA/WIteW5OG5mtZBn0sjiW8CqiDgD\nuIPCI8BjRMTGiFgbEWvnLlzU0ABbhYvjZlYLed6e2gMUXzmsSPYNi4gXizY3AX/ZgLiaUqUO74+/\n73h23j9reHv5yX0c7WkbHn/m+T1855tz6O/T8JiOzuDyq7szn8PMLM+k8QBwqqRXUUgWVzAy9ToA\nkpZFxN5k823AtJy6pFKH90jCGEkIe57qHN7ev7eD73xzDgP9MWpMRGQ+h5kZ5Hh7Kun7eD/wbQrJ\n4LaI2Cnpo5LelgzbIGmnpIeBDcB78ok2X5U6vEsTRsHo7f4+ETH6GAP9I8dwF7mZZZHnlQYRsQXY\nUrLvw0WvrwWm/bKy9SxiDx3DhXIzy6LZC+FGfYvYQ8dwodzMsnDSaAGXX92NVLrmVbB/bzvvOHv5\n8Hbp+8U6OmPMMdo7BocL4eW6yIsL5WZmThot4IcPzSCitGYBhbrF0NdYc+YPIAWLl/VzwaVHaO8Y\nPU4a2X79JT1c9ScHWbysf/gzV/3JQRfBzWyUXGsals1dX59DpUJ32vas2cHGuwtPMW94y9JRj9tC\noThe3BFe2kVuZlbKVxotYLDK1diLi9gudJtZLThptIC2Kv8rFRexXeg2s1rw7akcVOq8vvET87nr\n63MYHCwkjGWr+kY16xVExe3iQnnX3EHaOwYZ6B/JQMWF8CxxmZk5aTRYpc7rGz8xn/+8faSGMTg4\n1N1djZEk0nN47OVKcSHcHeFmloVvTzVYpc7r8kXviRfCKx1jqBCeJS4zM3DSaLhKBelqi97Vcke4\nmU2Ek0aDVSpIV1v0rpY7ws1sIpw0Giyt87qjM+h9RbzjnOV0zgzSu7vH7/jOtj16X3HHtzvCzSwL\nJ40GK+28njN/gIjgSHc7hDja04YUSIUf8m1twZsuO8Lyk/sY+cFfmhDKGRm/YMkAv/uxA2U7vt0R\nbmZZqHhNhang5DVnxMdv3lJ5YJPY8Jal7N879iG2xcv6+ey/Pjehz4wV/MP2PZWHmdm0946zVz4Y\nEWsrjfOVRs6qKUCX+4yZWb3lmjQkXSTpCUm7JH0o5f2Zkv4xef8+SasaH2V9VVOALvcZM7N6yy1p\nSGoHrgcuBtYAV0paUzLst4CDEXEK8BngLxobZf1VU4BO+0xa4btQBzEzq508rzTWAbsi4qmIOAbc\nClxaMuZS4Kbk9e3AhSpuY54CqilAp31mwZIBigvfy0/u469uf75R34aZTRN5TiOyHHimaHs38Npy\nYyKiX1I3cDywvyERNkg1U5J7GnMzy8OUKIRLWi9pm6Rthw8eyDscM7MpK8+ksQdYWbS9ItmXOkZS\nBzAfeLH0QBGxMSLWRsTauQsX1SlcMzPLM2k8AJwq6VWSZgBXAJtLxmwG3p28vgy4K6ZaY4mZWQvJ\nraaR1CjeD3wbaAdujIidkj4KbIuIzcANwFcl7QIOUEgsZmaWk1zX04iILcCWkn0fLnrdC/xao+My\nM7N0U6IQbmZmjeGkYWZmmTlpmJlZZk4aZmaWmZOGmZll5qRhZmaZOWmYmVlmThpmZpaZk4aZmWXm\npGFmZpk5aZiZWWZOGmZmlpmThpmZZeakYWZmmTlpmJlZZk4aZmaWWS5JQ9IiSXdI+lHy58Iy4wYk\nPZR8lS4Fa2ZmDZbXlcaHgDsj4lTgzmQ7TU9EnJl8va1x4ZmZWZq8ksalwE3J65uAt+cUh5mZTUBe\nSePEiNibvH4OOLHMuFmStkn6niQnFjOznHXU68CS/hNYmvLWHxdvRERIijKHOSki9kg6GbhL0o6I\neDLlXOuB9QCLly6fZORmZlZO3ZJGRLyp3HuS9klaFhF7JS0Dni9zjD3Jn09J+g5wFjAmaUTERmAj\nwMlrziiXgMzMbJLyuj21GXh38vrdwDdLB0haKGlm8noxcD7waMMiNDOzMfJKGp8C3izpR8Cbkm0k\nrZW0KRnzM8A2SQ8DdwOfiggnDTOzHNXt9tR4IuJF4MKU/duAq5LXW4HXNDg0MzMbhzvCzcwsMycN\nMzPLzEnDzMwyc9IwM7PMnDTMzCwzJw0zM8vMScPMzDJz0jAzs8ycNMzMLDMnDTMzy8xJw8zMMnPS\nMDOzzJw0zMwsMycNMzPLzEnDzMwyU8TUWh1V0mHgibzjyGgxsD/vIDJolTihdWJtlTihdWJtlTih\nOWM9KSKWVBqUyyJMdfZERKzNO4gsJG1rhVhbJU5onVhbJU5onVhbJU5orVhL+faUmZll5qRhZmaZ\nTcWksTHvACagVWJtlTihdWJtlTihdWJtlTihtWIdZcoVws3MrH6m4pWGmZnVyZRKGpIukvSEpF2S\nPpR3POVIulHS85J+kHcs45G0UtLdkh6VtFPSB/KOqRxJsyTdL+nhJNY/zzum8Uhql/R9Sf+Sdyzj\nkfRjSTskPSRpW97xlCNpgaTbJT0u6TFJ5+YdUylJpyV/j0NfhyR9MO+4JmrK3J6S1A78EHgzsBt4\nALgyIh7NNbAUkt4AHAG+EhGn5x1POZKWAcsiYrukucCDwNub9O9UwHERcURSJ3Av8IGI+F7OoaWS\n9AfAWmBeRLw173jKkfRjYG1ENFtPwSiSbgK+GxGbJM0AZkfES3nHVU7y82oP8NqIeDrveCZiKl1p\nrAN2RcRTEXEMuBW4NOeYUkXEPcCBvOOoJCL2RsT25PVh4DFgeb5RpYuCI8lmZ/LVlL8RSVoBvAXY\nlHcsU4Gk+cAbgBsAIuJYMyeMxIXAk62WMGBqJY3lwDNF27tp0h9wrUjSKuAs4L58IykvueXzEPA8\ncEdENGsTe0jrAAAE80lEQVSsfwv8ETCYdyAZBPAfkh6UtD7vYMp4FfAC8H+SW36bJB2Xd1AVXAHc\nkncQ1ZhKScPqRNIc4GvAByPiUN7xlBMRAxFxJrACWCep6W79SXor8HxEPJh3LBm9PiLOBi4Grk5u\nrTabDuBs4PMRcRbwMtDMNc0ZwNuAf8o7lmpMpaSxB1hZtL0i2WeTkNQHvgbcHBFfzzueLJJbE3cD\nF+UdS4rzgbcltYJbgV+Q9Pf5hlReROxJ/nwe+GcKt4GbzW5gd9GV5e0UkkizuhjYHhH78g6kGlMp\naTwAnCrpVUkmvwLYnHNMLS0pLt8APBYRn847nvFIWiJpQfK6i8IDEY/nG9VYEXFtRKyIiFUU/h+9\nKyLemXNYqSQdlzwAQXK75xeBpnviLyKeA56RdFqy60Kg6R7WKHIlLXprCqbQhIUR0S/p/cC3gXbg\nxojYmXNYqSTdAlwALJa0G/hIRNyQb1SpzgfeBexIagUA10XElhxjKmcZcFPyVEobcFtENPXjrC3g\nROCfC7870AH8Q0T8e74hlfV7wM3JL4xPAe/NOZ5USfJ9M/DbecdSrSnzyK2ZmdXfVLo9ZWZmdeak\nYWZmmTlpmJlZZk4aZmaWmZOGmZll5qRhU5akgWQ20R9I+idJsyuMvy7jcX8saXHy+kil8ZMh6T2S\nfiLt3CljL5a0LZmV+PuS/qaesdn05KRhU1lPRJyZzCR8DHhfhfGZkkaDvQf4iUqDkilTPge8MyLW\nUJhBd1d9Q7PpyEnDpovvAqcASHpnsvbGQ5K+mEx0+CmgK9l3czLuG8lEfTsnMllf0p3+NUkPJF/n\nJ/v/LFlL5TuSnpK0oegzf5qsBXOvpFskXSPpMgo//G9O4upKhv+epO3JOherk31/BHw8Ih6H4Xm4\nPp8c+8uSPi/pe8l5L0jieEzSlyfzl2rTj5OGTXmSOijM97ND0s8Avw6cn0xuOAD8RkR8iJErk99I\nPvqbEXEOhR/cGyQdn/GUfwd8JiJ+DvhVRk+Bvhr4JQpzOH1EUqekoXE/m8S5FiAibge2JfGdGRE9\nyTH2J5MIfh64Jtl3OoX1TspZCJwL/D6F6XU+A7waeI2kMzN+X2ZTZxoRsxRdRdOffJfCPFrrgXOA\nB5LpMbooTKWeZoOkX0lerwROBV7McN43AWuS4wPMS2YKBvjXiDgKHJX0PIWpOs4HvhkRvUCvpG9V\nOP7QxJEPAv8rQzwA34qIkLQD2BcROwAk7QRWAQ+N92GzIU4aNpX1JFcTw5JJGG+KiGvH+6CkCyj8\n8D83Il6R9B1gVsbztgGvS5JA8TEBjhbtGqC6f4NDxyj+/E4KyfDhCp8ZLIlhsMoYbJry7Smbbu4E\nLpN0AoCkRZJOSt7rS6aCB5gPHEwSxmrgdRM4x39QmECP5ByVbv/8F/DLKqxzPgcoXv71MDA3wzn/\nCrhO0k8n52yTVKnwbzZh/g3DppWIeFTSn1BYja4N6AOuBp4GNgKPSNoO/CbwPkmPAU8A5dYan53M\nVDzk08AG4HpJj1D4N3YP4zy5FREPSNoMPALsA3YA3cnbXwa+IKmHQk2i3DEekfRB4Jbk0eIAPMuv\n1ZxnuTVrApLmRMSR5Af+PcD6ofXZzZqJrzTMmsNGSWso1E1ucsKwZuUrDTMzy8yFcDMzy8xJw8zM\nMnPSMDOzzJw0zMwsMycNMzPLzEnDzMwy+/9uIrU0J+RImQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fc391f6b3d0>"
+       "<matplotlib.figure.Figure at 0x7f09ab2360d0>"
       ]
      },
      "metadata": {},
